kubernetes/gogs/gogs-deploy.yml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: gogs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
      - name: gogs
        image: gogs/gogs
        ports:
        - containerPort: 3000
        - containerPort: 22
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: gogs-storage
      volumes:
      - name: gogs-storage
        emptyDir: {}
