kubernetes/gogs/gogs-service.yml
kind: Service
apiVersion: v1
metadata:
  name: gogs-service
spec:
  selector:
    app: gogs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
