kubernetes/gogs/gogs-all.yml
---
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: gogs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
      - name: gogs
        image: gogs/gogs
        ports:
        - containerPort: 3000
        - containerPort: 22
          protocol: TCP
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /data
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: gogs-pv-claim
---
kind: Service
apiVersion: v1
metadata:
  name: gogs-service
spec:
  selector:
    app: gogs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: gogs-ingress
spec:
 rules:
   - host: gogs.192.168.1.10.nip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: gogs-service
             servicePort: 3000
