kubernetes/gogs/gogs-ingress.yml
apiVersion: apps/v1beta1
kind: Ingress
metadata:
 name: gogs-ingress
spec:
 rules:
   - host: gogs.192.168.1.10.nip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: gogs-service
             servicePort: 3000
